//
// Copyright 2019 Wireline, Inc.
//

syntax = "proto3";
package dxos.auth;

import "google/protobuf/any.proto";

message Signature {
  bytes signature = 1;
  bytes key = 2;
}

message SignedMessage {
  string bucket_id = 1;
  google.protobuf.Any signed = 2;
  repeated Signature signatures = 3;
}

// This needs stably sorted for signing and verification.
message PartyGenesis {
  string type = 1;  // party.genesis
  bytes party = 2;  // The party public key.
  bytes feed = 3;   // The initial feed to admit.
  bytes admit = 4;  // The key to admit (usually a pseudonym key).
  bytes nonce = 5;
  double created = 6;
}

// This needs stably sorted for signing and verification.
message KeyAdmit {
  string type = 1;  // party.admit.key
  bytes party = 2;
  bytes admit = 3;  // The key to admit.
  bytes nonce = 4;
  double created = 5;
}

// This needs stably sorted for signing and verification.
message FeedAdmit {
  string type = 1;  // party.admit.feed
  bytes party = 2;
  bytes feed = 3;  // The feed public key.
  bytes nonce = 4;
  double created = 5;
}

// This needs stably sorted for signing and verification.
message FeedGenesis {
  string type = 1;  // party.admit.feed
  bytes feed = 2;  // The feed public key.
  bytes admit = 3; // A public key to admit (normally a device pseudonym key).
  bytes nonce = 4;
  double created = 5;
}
